--- a/server/webapp/public/index.html
+++ b/server/webapp/public/index.html
@@ -21,6 +21,8 @@
     <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.noStyle.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-grid.css">
     <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-theme-alpine.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -71,16 +73,6 @@
             const fileName2 = document.querySelector('#file-js-example2 .file-name');
             fileName2.textContent = fileInput2.files[0].name;
           }
-          
-        }
-
-        const fileInput2 = document.querySelector('#file-js-example3 input[type=file]');
-        fileInput2.onchange = () => {
-          if (fileInput2.files.length > 0) {
-            const fileName2 = document.querySelector('#file-js-example3 .file-name');
-            fileName2.textContent = fileInput2.files[0].name;
-          }
-          
         }
 
         });
